--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ bs4 = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 nose = "^1.3.7"
+black = {version = "^20.8b1", allow-prereleases = true}
+flake8 = "^3.8.3"
 
 [tool.taskipy.tasks]
 test = "nosetests"
